# stellar-market

./: ARBITRATOR_VOTING_IMPLEMENTATION.md  DISPUTE_HISTORY_AND_DEADLINE_EXTENSION.md  EARNINGS_RECONCILIATION_IMPLEMENTATION.md  ESCROW_STATE_MACHINE_SUMMARY.md  QUICK_START_WALLET_DISPUTES.md  TEST_FIXES_NEEDED.md  WALLET_DISPUTE_SESSION_IMPLEMENTATION.md  fix.py  fix_reputation.py  impl_reputation.py  issues.md  patch.py  work.md
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs  proptest_tests.rs  test.rs
contracts/reputation/test_snapshots/test/: test_average_rating.1.json  test_badge_awarded_on_tier_crossing.1.json  test_badge_event_preserved_alongside_tier_up.1.json  test_badge_not_duplicated.1.json  test_badge_timestamp.1.json  test_decay_calculation.1.json  test_decay_formula_consistent_across_period_ranges.1.json  test_decay_uses_timestamp_instead_of_ledger_sequence.1.json  test_duplicate_review_rejected_with_already_reviewed.1.json  test_endorse_different_skills_same_endorser_allowed.1.json  test_endorse_duplicate_rejected.1.json  test_endorse_multiple_endorsers_accumulate.1.json  test_endorse_success.1.json  test_endorse_weighted_by_endorser_rating.1.json  test_first_review_succeeds_and_updates_reputation.1.json  test_get_reputation_with_decay.1.json  test_get_set_min_stake.1.json  test_get_tier_bronze.1.json  test_get_tier_gold.1.json  test_get_tier_platinum.1.json  test_get_tier_silver.1.json  test_job_not_completed.1.json  test_last_updated_ledger_advances_on_write.1.json  test_lazy_decay_high_rate_full_decay_saturates.1.json  (+29 more)
(+488 files in other folders)
